<resources>
    <string name="app_name">ToDay</string>
    <string name="open_tasks_title_text">Open Tasks</string>
    <string name="tasksList_title_filterDaliog_text">Choose label</string>
    <string name="tasksList_reset_filterDialog_text">All tasks</string>
    <string name="detail_title_tv_text">Task Details</string>
    <string name="tasksList_closedTasks_tv_text">Closed Tasks</string>
    <string name="menu_title_tv_text">ToDay</string>
    <string name="login_username_et_hint">Username</string>
    <string name="login_password_et_hint">Password</string>
    <string name="login_register_btn_text">Register</string>
    <string name="login_login_btn_text">Login</string>
    <string name="newTask_nameTask_text">Name Task</string>
    <string name="createAccount_username_et_hint">Username</string>
    <string name="createAccount_password_et_hint">Password</string>
    <string name="createAccount_password2_et_hint">Re-enter Password</string>
    <string name="createAccount_register_btn_text">Register</string>
    <string name="createAccount_back_btn_text">Back</string>
    <string name="edit_noLabel_spinner_text">No Label</string>
    <string name="task_detail_task_done_date_text">This task was marked completed on: </string>
    <string name="edit_defaultTitle_tv_text">New Task</string>
    <string name="edit_editTaskTitle_tv_text">Edit Task</string>
    <string name="edit_editLabeltitle_tv_text">Edit Label</string>
    <string name="edit_name_et_hint">Name</string>
    <string name="edit_notes_et_hint">Notes</string>
    <string name="edit_deadline_tv_text">Deadline</string>
    <string name="createAccount_back_btn_tt">Back to Menu</string>
    <string name="createAccount_register_btn_tt">Register new user</string>
    <string name="login_login_btn_tt">Log in user</string>
    <string name="detail_editTask_button_tt">Edit Task</string>
    <string name="edit_save_btn_tt">Save Task</string>
    <string name="labelsList_new_fab_tt">Add Label</string>
    <string name="menu_openTasks_btn_tt">Open Tasks</string>
    <string name="menu_closedTasks_btn_tt">Completed Tasks</string>
    <string name="menu_myProfile_btn_tt">My Profile</string>
    <string name="tasksList_new_fab_tt">Add new Task</string>
    <string name="tasksList_filter_btn_tt">Filter</string>
    <string name="tasksListRow_info_icon_tt">Show Details</string>
    <string name="edit_taskDeadline_btn_tt">Set a deadline</string>
    <string name="labelsListRow_info_icon_tt">Edit Label</string>
    <string name="createAccount_usernameInvalid_error_toast">Username is not compliant</string>
    <string name="createAccount_passwordInvalid_error_toast">Password(s) is/are not compliant</string>
    <string name="login_welcomeBack_info_toast">Welcome back</string>
    <string name="login_incorrect_error_toast">Incorrect credentials</string>
    <string name="menu_openTasks_btn_text">Open Tasks</string>
    <string name="menu_closedTasks_btn_text">Closed Tasks</string>
    <string name="menu_labels_btn_text">Labels</string>
    <string name="menu_labels_btn_tt">Labels</string>
    <string name="task_date_error_toast">Deadline is invalid</string>
    <string name="task_name_error_toast">Name is invalid</string>
    <string name="task_notes_error_toast">Notes are invalid</string>
</resources>