<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/menu_title_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif"
        android:text="@string/menu_title_tv_text"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/menu_hor1_gl_id"
        app:layout_constraintStart_toStartOf="@+id/menu_vert1_gl_id" />

    <View
        android:id="@+id/menu_top_hr_id"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="@+id/menu_hor1_gl_id"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu_vert1_gl_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu_hor1_gl_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="74dp" />


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:onClick="gotoOpenTasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"
        android:tooltipText="@string/menu_openTasks_btn_tt">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/open_tasks_btn" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="95dp"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:text="@string/menu_openTasks_btn_text"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:onClick="gotoClosedTasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"
        android:tooltipText="@string/menu_closedTasks_btn_tt">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/completed_tasks_btn" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="95dp"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:text="@string/menu_closedTasks_btn_text"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:onClick="gotoLabelList"
        android:tooltipText="@string/menu_labels_btn_tt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/labels_btn" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:text="@string/menu_labels_btn_text"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>