<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TasksListActivity">


    <TextView
        android:id="@+id/tasksList_title_tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif"
        android:text="@string/open_tasks_title_text"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tasksList_hor1_gl_id"
        app:layout_constraintStart_toStartOf="@+id/tasksList_vert1_gl_id" />

    <View
        android:id="@+id/tasksList_top_hr_id"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="@+id/tasksList_hor1_gl_id"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/tasksList_hor2_gl_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="72dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/tasksList_hor1_gl_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="74dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/tasksList_vert1_gl_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksList_tasks_rv_id"
        android:layout_width="331dp"
        android:layout_height="630dp"
        app:layout_constraintBottom_toTopOf="@+id/tasksList_hor2_gl_id"
        app:layout_constraintStart_toStartOf="@+id/tasksList_vert1_gl_id"
        app:layout_constraintTop_toBottomOf="@+id/tasksList_hor1_gl_id" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tasksList_new_fab_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="Plus"
        android:onClick="gotoEditActivity"
        android:src="@drawable/plus_black"
        android:tooltipText="@string/tasksList_new_fab_tt"
        app:backgroundTint="@color/hhs_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/tasksList_filter_btn_id"
        android:layout_width="32dp"
        android:layout_height="37dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="14dp"
        android:background="@color/white"
        android:onClick="filterTasks"
        android:scaleType="fitCenter"
        android:tooltipText="@string/tasksList_filter_btn_tt"
        app:layout_constraintBottom_toTopOf="@+id/tasksList_hor1_gl_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/filter_solid" />


</androidx.constraintlayout.widget.ConstraintLayout>